# rust-aws-lambda-with-cdk

./: Cargo.toml  Makefile  README.md
infrastructure/: index.ts  package-lock.json  package.json
src/: main.rs
